# ai-sdk

./: .gitignore  CLAUDE.md  Makefile  README.md  example.py  pyproject.toml
.claude/skills/: add-sdk-method.md  add-test.md  debug-ci.md  run-integration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-sdk-ci.yml  ai-sdk-integration-tests.yml  ai-sdk-lint.yml  ai-sdk-release-cli.yml  ai-sdk-release-java.yml  ai-sdk-release-python.yml  ai-sdk-release-typescript.yml  ai-sdk-release.yml  ai-sdk-unit-tests.yml  impact-analysis.yml
cli/: CLAUDE.md  Cargo.toml  README.md  install.sh
cli/src/: client.rs  config.rs  error.rs  main.rs  streaming.rs
cli/src/commands/: abilities.rs  agents.rs  bots.rs  chat.rs  configure.rs  invoke.rs  mod.rs  personas.rs
cli/src/tui/: app.rs  create_agent.rs  create_persona.rs  markdown.rs  mod.rs  ui.rs  wizard.rs
cli/tests/: integration_test.rs
cookbook/: README.md
docs/: API_REFERENCE.md  README.md  async.md  error-handling.md  langchain.md  mcp.md  quickstart.md  releasing.md  standalone.md
java/: CLAUDE.md  README.md  pom.xml
n8n-nodes-metadata/: CLAUDE.md  Makefile  README.md  index.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
python/: README.md  example.py  pyproject.toml
python/tests/: __init__.py  (+21 more)
scripts/: pre-commit
tests/: conftest.py  test_agent.py  test_async.py  test_bots.py  test_config.py  test_conversation.py  test_models.py  test_personas.py  test_streaming.py  test_url_encoding.py
typescript/: CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
(+161 files in other folders)
